--- a/src/Pages/Dashboard/style.scss
+++ b/src/Pages/Dashboard/style.scss
@@ -10,5 +10,17 @@
     border-radius: 4px;
     padding: 16px;
     flex: 1;
+    width: 48%;
+  }
+  .chart-bar {
+    background: #FFFFFF;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    padding: 16px;
+    flex: 1;
+    width: 42%;
+    justify-content: center;
+    flex-direction: column;
+    display: flex;
   }
 }
